--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -14,29 +14,29 @@
             <div class="navbar-collapse collapse w-100" id="navbar">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a{% if "/" == request.path %} class="nav-link active" {% else %} class="nav-link" href="{% url 'home' %}"  {% endif %}>
                             Home
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'cars' %}">
+                        <a {% if 'cars' in request.path %} class="nav-link active" {% else %} class="nav-link" href="{% url 'cars' %} {% endif %}">
                             Cars
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">
+                        <a{% if 'about' in request.path %} class="nav-link active" {% else %} class="nav-link" href="{% url 'about' %}"  {% endif %}>
                             About
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'services' %}">
+                        <a {% if 'services' in request.path %} class="nav-link active" {% else %} class="nav-link" href="{% url 'services' %}"  {% endif %}>
                             Services
                         </a>
                     </li>
 
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+                        <a {% if 'contact' in request.path %} class="nav-link active" {% else %} class="nav-link" href="{% url 'contact' %}"  {% endif %}>Contact</a>
                     </li>
                     <li class="nav-item dropdown m-hide">
                         <a href="#full-page-search" class="nav-link h-icon">
